<resources>
    <string name="app_name" translatable="false">Leukogram</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="home">Home</string>
    <string name="new_exam">New Exam</string>
    <string name="manage_exams">Manage Exams</string>
    <string name="user_profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="patient_data">Patient Data</string>
    <string name="results">Results</string>

    <string name="first_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="save">Save</string>

    <string name="action_settings">Settings</string>

    <string name="cell0" translatable="false">Neutrófilos</string>
    <string name="cell1" translatable="false">Bastonetes</string>
    <string name="cell2" translatable="false">Linfócitos</string>
    <string name="cell3" translatable="false">Monócitos</string>
    <string name="cell4" translatable="false">Eosinófilos</string>
    <string name="cell5" translatable="false">Basófilos</string>
    <string name="cell6" translatable="false">Blasto</string>
    <string name="cell7" translatable="false">Promielócito</string>
    <string name="cell8" translatable="false">Mielócito</string>
    <string name="cell9" translatable="false">Metamielócito</string>
    <string name="cell10" translatable="false">Cell 10</string>
    <string name="cell11" translatable="false">Eritoblasto</string>

    <string name="toolbar_share">Export</string>
    <string name="toolbar_delete">Delete</string>

    <string name="totalCellsNumberMessage">What is the total amount of cells in μL?</string>
    <string name="totalCellsTitle">Total Cells</string>
    <string name="totalCellsDefault">Default: 10,000</string>

    <string name="dialog_cell_message">Stop showing images</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>

    <string name="alertdialog_delete_title">Delete Exams</string>
    <string name="alertdialog_delete_message">Are you sure you want to delete the selected exams?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="choose_patient_by_id">Choose Patient by ID:</string>
    <string name="start_exam">Start Exam</string>
    <string name="or">OR</string>
    <string name="register_a_new_patient">Register a new patient</string>
    <string name="fuzzy_result">Fuzzy Result</string>
    <string name="end_exam">End Exam</string>
    <string name="fuzzy">Fuzzy</string>

    <string name="details">Details</string>

    <string name="user">User</string>
    <string name="id">ID</string>
    <string name="patient">Patient</string>
    <string name="patientId">ID</string>
    <string name="age">Age</string>
    <string name="birth">Birth</string>
    <string name="sex">Sex</string>
    <string name="title_activity_main">Home</string>

    <string name="main_cells">MAIN CELLS</string>
    <string name="other_cells">OTHER CELLS</string>
    <string name="end_exam_uppercase">END EXAM</string>

    <string name="permission_reason">Without this permission, it will not be possible to write the file to export.</string>
</resources>
