<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainCellsGrid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:verticalSpacing="10dp"
    android:horizontalSpacing="10dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/cell0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/buttonshape"
            android:longClickable="true"
            android:text="@string/cell0" />

        <Button
            android:id="@+id/cell1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/buttonshape"
            android:longClickable="true"
            android:text="@string/cell1" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/cell2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/buttonshape"
            android:longClickable="true"
            android:text="@string/cell2" />

        <Button
            android:id="@+id/cell3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/buttonshape"
            android:longClickable="true"
            android:text="@string/cell3" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/cell4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/buttonshape"
            android:longClickable="true"
            android:text="@string/cell4" />

        <Button
            android:id="@+id/cell5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/buttonshape"
            android:longClickable="true"
            android:text="@string/cell5" />

    </TableRow>

</TableLayout>