<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical"
    tools:context="br.com.rg.gabrielsalles.leukogramapp.MainActivity" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/newExamBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:background="#9fa8da"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <ImageView

                android:src="@drawable/ic_add_circle_black_48dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:scaleType="fitCenter"/>

            <TextView
                android:text="@string/new_exam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/manageExamsBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:background="#9fa8da"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <ImageView

                android:src="@drawable/ic_format_list_bulleted_black_48dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:scaleType="fitCenter"/>

            <TextView
                android:text="@string/manage_exams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/userProfileBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:background="#9fa8da"
            android:layout_weight="1">

            <ImageView

                android:src="@drawable/ic_person_black_48dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:scaleType="fitCenter"/>

            <TextView
                android:text="@string/user_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingsBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:background="#9fa8da"
            android:layout_weight="1">

            <ImageView

                android:src="@drawable/ic_menu_manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:scaleType="fitCenter"/>

            <TextView
                android:text="@string/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
