<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical"
    tools:context="br.com.rg.gabrielsalles.leukogramapp.profiles.MainUser">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/firstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textSize="15sp"
                    android:paddingEnd="15dp"
                    android:paddingRight="15dp"
                    android:paddingLeft="0dp"
                    android:paddingStart="0dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/firstNameText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textSize="15sp"
                    android:paddingEnd="15dp"
                    android:paddingRight="15dp"
                    android:paddingLeft="0dp"
                    android:paddingStart="0dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/lastNameText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/userId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="id:"
                    android:textSize="15sp"
                    android:paddingEnd="15dp"
                    android:paddingRight="15dp"
                    android:paddingLeft="0dp"
                    android:paddingStart="0dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/userIdText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="18sp" />

            </LinearLayout>

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:onClick="saveAndNext"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:text="@string/save" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>